# bsix

./: .gitignore  Experiment.py  README.md  Tutorial.ipynb  pyproject.toml
MATRIX/datasets/: Aids2.csv  Aids2.txt  GBSG2.txt  TRACE.txt  acath.csv  acath.txt  breastcancer.arff  breastcancer.txt  cgd.txt  colon.csv  colon.txt  cost.csv  cost.txt  dataDIVAT2.txt  diabetes.arff  diabetes.csv  diabetes.txt  diabetes2.txt  divat2.csv  divat2.txt  gbsg.txt  gbsg2.txt  metabric.h5  pbc.txt  phpl04K8a.csv  phpl04K8a.txt  prostate.csv  prostate.txt  rdata.csv  rdata.txt  retinopathy.csv  retinopathy.txt  rhc.csv  rhc.txt  rott2.csv  rott2.txt  smarto.csv  smarto.txt  stagec.csv  stagec.txt  (+12 more)
MATRIX/models/: __init__.py  base.py
MATRIX/models/loggers/: deepMultiTaskLogger.py  deepSurvLogger.py
MATRIX/models/metodologies/: acceleratedFailureTime.py  baseCoxRegression.py  baseCoxRegressionWithTimeVarying.py  baseRandomSurvivalForest.py  coxRegression.py  coxRegressionWithSignificance.py  coxRegressionWithTimeVarying.py  deepMultiTask.py  deepMultiTaskMultiLoss.py  deepSurv.py  deepTimeVarying.py  randomSurvForest.py  survTree.py  utils.py
MATRIX/models/nets/: deepNets.py
MATRIX/utils/: __init__.py  calculate_metrics.py  classification_metrics.py  compute_metrics.py  estimators.py  load_data.py  load_results.py  survival_metrics.py  survival_utils.py
bsix/datasets/: aids2.txt  cgd.csv  cgd.txt  pbc.txt  phpl04K8a.txt  rott2.txt  whas.h5
bsix/models/: __init__.py  base.py
bsix/models/metodologies/: baseSurvivalTree.py  randomSurvForest.py  survTree.py
bsix/utils/: estimators.py  load_data.py  survival_metrics.py
docs/: requirements.txt
docs/source/: bsix.models.rst  bsix.rst  bsix.utils.rst  conf.py  index.rst  modules.rst
src/bsix/: __init__.py
src/bsix/datasets/: colon.txt  gbsg.h5  metabric.txt  rhc.txt  smarto.txt  stagec.txt  trace.csv
src/bsix/models/: base.py
src/bsix/models/metodologies/: acceleratedFailureTime.py  baseSurvivalTree.py  (+11 more)
src/bsix/utils/: load_data.py  load_results.py
