[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bsix"
version = "0.0.0"
authors = [
    {name = "Francisco Moreno Cano", email = "i02mocaf@uco.es"}
]
description = "Benchmarking Survival analysis: Inference and eXplainability."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence :: Statistics",
]
dependencies = [
    "h5py>=3.14.0",
    "joblib>=1.5.0",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.0",
    "mplcursors>=0.7.0",
    "numba>=0.62.0",
    "numpy>=1.26",
    "pandas>=2.3.0",
    "remayn>=1.0.0",
    "scikit-learn>=1.6.0",
    "scikit-survival>=0.25.0",
    "scipy>=1.15.0",
    "shap>=0.49.0",
    "statsmodels>=0.14.0",
    "torch>=2.7.0",
    "torchtuples>=0.2.0",
]

[project.urls]
Source = "https://github.com/ayrna/bsix"

[tool.setuptools.package-data]
"bsix.datasets" = ["*"]

[tool.setuptools.exclude-package-data]
"bsix.datasets.beatriz" = ["*"]